--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
+    "swr": "^2.1.5",
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
