--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "^13.3.0",
     "bcryptjs": "^2.4.3",
+    "chrono-node": "^2.6.3",
+    "compromise": "^14.8.2",
     "daisyui": "^2.51.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
@@ -25,9 +27,11 @@
     "mongodb": "^4.1.1",
     "mongoose": "^7.0.1",
     "nanoid": "^4.0.1",
+    "natural": "^6.2.0",
     "next": "13.2.1",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
+    "node-nlp": "^4.26.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-contextmenu": "2.14.0",
