--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.6",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "^13.3.0",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "chrono-node": "^2.6.3",
     "compromise": "^14.8.2",
