--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Mongo DB
 
-MONGODB_URI=mongodb+srv://Adzz09:50422cekas@cluster0.cpq7t.mongodb.net/agenda_builder?retryWrites=true&w=majority
+MONGODB_URI=
 
 MONGODB=agenda_builder
 
@@ -14,8 +14,8 @@ JWT_SIGNING_KEY=QsTM17BMo1Bnuil37IdpnqkQc/3IDPnVG0NBlIu34LU=
 
 
 # Google OAuth
-GOOGLE_CLIENT_ID=246197379292-fnme4aauqdhcjaeofj9kf0g767blbbhh.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 
 # Next
